# ESOT500syn

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
configs/: batch_sequence_base_configs.yaml  batch_sequence_gen_configs.yaml  box_on_table.yaml  debug_single_sequence_configs.yaml  default_configs.yaml  meta_base_configs.yaml  meta_gen_configs.yaml  single_sequence_configs.yaml
script/: generate_batch_configs.py  generate_batch_events.py  generate_batch_sequence.py  generate_data.py  generate_single_sequence.py  imgs_to_video.py  rgb2event.py  vis_events.py
src/esot500syn/: __init__.py  environment.py  main.py  motion.py  recorder.py  runner.py
src/esot500syn/demo/: load_banana_in_AI2THOR.py  load_banana_in_PushCube.py  load_banana_in_ReplicaCAD.py  load_banana_in_RoboCasa.py
src/esot500syn/demo/environment/: config.yaml  universal_runner.py
src/esot500syn/motion/: camera.py  object.py
src/esot500syn/processing/: annotations.py
src/esot500syn/simulation/: environment.py  mixins.py  scene_builders.py
src/esot500syn/utils/: imgs_to_video.py
