[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esot500syn"
version = "0.1.0"
description = "A tool for generating event-based VOT datasets in simulation."
requires-python = ">=3.8"
dependencies = [
    "mani-skill==3.0.0b21",
]

# [project.scripts]
# esot500syn-gen = "esot500syn.main:main_cli"

[tool.setuptools.packages.find]
where = ["src"]